--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-  "name": "waste",
+  "name": "practice-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "echarts-for-react": "^3.0.2",
+    "firebase": "^12.1.0",
+    "hamburger-react": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
+    "react-confirm-alert": "^3.0.6",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "tailwindcss": "^4.1.12"
   }
 }
