--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "echarts-for-react": "^3.0.2",
     "firebase": "^12.1.0",
     "hamburger-react": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet.offline": "^3.1.0",
+    "leaflet.vectorgrid": "^1.3.0",
+    "pigeon-maps": "^0.22.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-confirm-alert": "^3.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
