--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "pigeon-maps": "^0.22.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-confetti": "^6.4.0",
     "react-confirm-alert": "^3.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
+    "react-place-autocomplete": "^0.1.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
